# lunar_archive

./: .gitignore  .tool-versions  README.md  docker-compose.yml  mix.exs  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: prototype.yml  queue.yml  scanner.yml  server.yml  web.yml
apps/prototype/: buf.gen.yaml
apps/prototype/common/: protocol.proto
apps/prototype/services/: scan.proto
apps/queue/: .env.example  .gitignore  README.md  go.mod  go.sum  mix.exs  package.json  server.go
apps/queue/config/: runtime.exs
apps/queue/lib/: queue.ex
apps/queue/services/: cron.go  queue.go
apps/queue/test/: queue_test.exs
apps/scanner/: Cargo.toml  build.rs  package.json
apps/scanner/src/: common.rs  generated.rs  main.rs
apps/scanner/src/services/: mod.rs  queue.rs  scan.rs
apps/server/: .env.example  .gitignore  README.md  jest.config.ts  mix.exs  package.json  pnpm-lock.yaml  tsconfig.json
apps/server/config/: config.exs  dev.exs  test.exs
apps/server/lib/: application.ex  lunar.ex  lunar_web.ex  repo.ex  router.ex  server_web.ex
apps/server/prisma/: schema.prisma
apps/server/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/server/test/: jest.setup.ts  lunar_test.exs  test_helper.exs
apps/web/: .env.example  astro.config.mjs  package.json  tsconfig.json
apps/web/src/stores/: index.ts  (+2 more)
config/: config.exs  dev.exs  prod.exs  runtime.exs
lib/: lunar.ex
lib/lunar/: application.ex
lib/lunar_web/: endpoint.ex  router.ex
lib/lunar_web/views/: error_view.ex
test/support/: conn_case.ex
(+135 files in other folders)
