[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
amiquip = { version = "0.4", default-features = false }
regex = "1.7.1"

[build-dependencies]
glob = "0.3.1"
tonic-build = "0.8"